add api dashboard
